# smartcontracts

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.sh  soroban-config.json
.github/workflows/: test.yml
contracts/campaign/: Cargo.toml
contracts/campaign/src/: lib.rs
contracts/donation/: Cargo.toml
contracts/donation/src/: lib.rs
contracts/verification/: Cargo.toml
contracts/verification/src/: lib.rs
givehub-contracts/: Cargo.toml
givehub-contracts/.github/workflows/: deploy.yml
scripts/: deploy.sh
tests/integration/: Cargo.toml  test_full_flow.rs
tests/integration/src/: lib.rs
tests/integration/tests/: test_full_flow.rs
